rename category operation added
