# app/Http/Controllers/CategoryController.php
@@ -509,4 +509,118 @@ class CategoryController extends Controller
             return response()->json(['message' => 'Error'], 500);
         }
     }
+
+    /**
+    * @OA\Put(
+    *     path="/api/categories/{categoryId}",
+    *     tags={"Category"},
+    *     security={{"sanctum":{}}},
+    *     summary="rename a category",
+    *     description="This endpoint allows you to rename a category.",
+    *     @OA\Parameter(
+    *         name="categoryId",
+    *         in="path",
+    *         required=true,
+    *         description="The ID of the category to retrieve",
+    *         @OA\Schema(type="integer", example=1)
+    *     ),
+    *     @OA\RequestBody(
+    *         required=true,
+    *         @OA\MediaType(
+    *             mediaType="application/json",
+    *             @OA\Schema(
+    *                 required={"name"},
+    *                 @OA\Property(property="name", type="string", example="fruits"),
+    *             )
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=200,
+    *         description="Successful operation",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=true),
+    *             @OA\Property(property="message", type="string", example="category renamed successfully."),
+    *             @OA\Property(property="category", type="object",
+    *                 @OA\Property(property="id", type="integer", example=1),
+    *                 @OA\Property(property="name", type="string", example="fruits"),
+    *                 @OA\Property(property="parent_id", type="integer", example="12"),
+    *                 @OA\Property(property="user_id", type="integer", example="14")
+    *             )
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=401,
+    *         description="Unauthenticated",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=false),
+    *             @OA\Property(property="message", type="string", example="Authentication needed.")
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=403,
+    *         description="Forbidden",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=false),
+    *             @OA\Property(property="message", type="string", example="Authorization needed.")
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=404,
+    *         description="Not found",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=false),
+    *             @OA\Property(property="message", type="string", example="Not found.")
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=422,
+    *         description="Validation error",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=false),
+    *             @OA\Property(property="message", type="string", example="Validation failed."),
+    *             @OA\Property(
+    *                 property="errors",
+    *                 type="object",
+    *                 @OA\Property(
+    *                     property="email",
+    *                     type="array",
+    *                     @OA\Items(type="string", example="The email has already been taken.")
+    *                 )
+    *             )
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=500,
+    *         description="Unexpected error",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=false),
+    *             @OA\Property(property="message", type="string", example="Internal error.")
+    *         )
+    *     )
+    * )
+    */
+    public function updateCategoryName(CategoryRequest $request){
+        try{
+            $user = auth()->user();
+            $category = $this->categoryService
+                        ->setUser($user)
+                        ->setId($request->categoryId)
+                        ->checkUserCategory()
+                        ->setName($request->name)
+                        ->updateCategoryName();
+            return response()->json([
+                'message'  => 'category renamed successfully.',
+                'category' => $category
+            ]);
+        } catch(AuthorizationException $e) {
+            return response()->json(['message' => 'Authorization Exception, you don\'t have the right permission to update this category'], 403);
+        } catch (ValidationException $e) {
+            return response()->json(['message' => 'Validation Error'], 422);
+        } catch(ModelNotFoundException $e) {
+            return response()->json(['message' => 'Not Found'], 404);
+        } catch (Exception $e) {
+            \Log::error($e->getMessage());
+            return response()->json(['message' => 'Error'], 500);
+        }
+    }
 }
