# routes/api.php
@@ -24,6 +24,7 @@ Route::prefix('categories')
     ->group(function(){
         Route::post('/', 'store')->name('category.store');
         Route::get('/', 'index')->name('get.categories');
+        Route::put('/{categoryId}', 'updateCategoryName')->name('category.update.name');
         Route::get('/tree', 'getCategoryTree')->name('category.get.tree');
         Route::get('/root', 'getCategoryRoot')->name('category.get.root');
         Route::get('/cards/{categoryId}', 'getCategoryCards')->name('category.get.cards');
